# aprendizaje-automatico-MLOps

./: .env  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: cd.yaml  ci.yaml
configs/: train_config.yaml
notebooks/: Decision tree_1.pkl  Decision tree_2.pkl  Decision tree_3.pkl  K-Nearest neighbors_1.pkl  K-Nearest neighbors_2.pkl  K-Nearest neighbors_3.pkl  Logistic regression_1.pkl  Logistic regression_2.pkl  Random forest_1.pkl  Random forest_2.pkl  Random forest_3.pkl  classification_task.ipynb
notebooks/ml_models/: Logistic_regression.pkl
src/: data.py  io_utils.py  metrics.py  modeling.py  predict.py  train.py
src/mlops_example/: data.py  io_utils.py  metrics.py  modeling.py  predict.py  train.py
tests/: test_data.py  test_io_utils.py  test_metrics.py  test_modeling.py  test_predict.py  test_train.py
