[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_example"
version = "0.1.0"
description = "Proyecto de ejemplo de MLOps"
authors = [
    { name="Alejandro Olivares Restrepo", email="tu_correo@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
